--- a/notebooks/get_sbml_model_info.ipynb
+++ b/notebooks/get_sbml_model_info.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
       "│ scFFat      │ fraction of blood flow going to adipose tissue                  │ UNITLESS          │ True         │ http://purl.obolibrary.org/obo/PBPKO_00033 │\n",
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
-      "│ scFPoor     │ fraction total blood flow going to poorly perfused tissue       │ UNITLESS          │ True         │ http://purl.obolibrary.org/obo/PBPKO_00046 │\n",
+      "│ scFPoor     │ fraction total blood flow going to poorly perfused tissue       │ UNITLESS          │ True         │ http://purl.obolibrary.org/obo/PBPKO_00047 │\n",
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
       "│ scFLiver    │ fraction total blood flow going to liver                        │ UNITLESS          │ True         │ http://purl.obolibrary.org/obo/PBPKO_00025 │\n",
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
@@ -308,23 +308,23 @@
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
       "│ Falv        │ alveolar ventilation rate                                       │ L_PER_HR          │ True         │ http://purl.obolibrary.org/obo/PBPKO_00114 │\n",
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
-      "│ PCFat       │ partition coefficient fat over blood                            │ UNITLESS          │ True         │ http://purl.obolibrary.org/obo/PBPKO_00165 │\n",
+      "│ PCFat       │ partition coefficient fat over blood                            │ UNITLESS          │ True         │ http://purl.obolibrary.org/obo/CHEBI_59999 │\n",
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
-      "│ PCLiver     │ partition coefficient liver over blood                          │ UNITLESS          │ True         │ http://purl.obolibrary.org/obo/PBPKO_00165 │\n",
+      "│ PCLiver     │ partition coefficient liver over blood                          │ UNITLESS          │ True         │ http://purl.obolibrary.org/obo/PBPKO_00577 │\n",
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
-      "│ PCRich      │ partition coefficient poorly perfused tissue over blood         │ UNITLESS          │ True         │ http://purl.obolibrary.org/obo/PBPKO_00165 │\n",
+      "│ PCRich      │ partition coefficient poorly perfused tissue over blood         │ UNITLESS          │ True         │ http://purl.obolibrary.org/obo/PBPKO_00587 │\n",
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
-      "│ PCPoor      │ partition coefficient richly perfused tissue over blood         │ UNITLESS          │ True         │ http://purl.obolibrary.org/obo/PBPKO_00165 │\n",
+      "│ PCPoor      │ partition coefficient richly perfused tissue over blood         │ UNITLESS          │ True         │ http://purl.obolibrary.org/obo/PBPKO_00584 │\n",
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
-      "│ PCSkin_sc   │ partition coefficient viable skin over stratum corneum          │ UNITLESS          │ True         │ http://purl.obolibrary.org/obo/PBPKO_00165 │\n",
+      "│ PCSkin_sc   │ partition coefficient viable skin over stratum corneum          │ UNITLESS          │ True         │ http://purl.obolibrary.org/obo/PBPKO_00182 │\n",
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
-      "│ PCSkin      │ partition coefficient viable skin over blood                    │ UNITLESS          │ True         │ http://purl.obolibrary.org/obo/PBPKO_00165 │\n",
+      "│ PCSkin      │ partition coefficient viable skin over blood                    │ UNITLESS          │ True         │ http://purl.obolibrary.org/obo/PBPKO_00588 │\n",
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
-      "│ PCAir       │ partition coefficient blood over air                            │ UNITLESS          │ True         │ http://purl.obolibrary.org/obo/PBPKO_00165 │\n",
+      "│ PCAir       │ partition coefficient blood over air                            │ UNITLESS          │ True         │ http://purl.obolibrary.org/obo/PBPKO_00568 │\n",
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
       "│ kGut        │ absorption rate constant gut                                    │ PER_H             │ True         │ http://purl.obolibrary.org/obo/PBPKO_00141 │\n",
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
-      "│ Kp_sc_vs    │ diffusion rate from stratum corneum to viable epidermis         │ DeciM_PER_HR      │ True         │ http://purl.obolibrary.org/obo/PBPKO_00184 │\n",
+      "│ Kp_sc_vs    │ diffusion rate from stratum corneum to viable epidermis         │ DeciM_PER_HR      │ True         │                                            │\n",
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
       "│ Km          │ Michaelis-Menten constant liver                                 │ MilliMOL          │ True         │ http://purl.obolibrary.org/obo/PBPKO_00214 │\n",
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
@@ -334,9 +334,9 @@
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
       "│ CLH         │ hepatic clearance rate                                          │ L_PER_HR          │ True         │ http://purl.obolibrary.org/obo/PBPKO_00234 │\n",
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
-      "│ Ke          │ renal excretion rate                                            │ L_PER_HR          │ True         │ http://purl.obolibrary.org/obo/PBPKO_00223 │\n",
+      "│ Ke          │ renal excretion rate                                            │ L_PER_HR          │ True         │ http://purl.obolibrary.org/obo/PBPKO_00237 │\n",
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
-      "│ fub         │ fraction of chemical unbound in blood                           │ UNITLESS          │ True         │ http://purl.obolibrary.org/obo/PKPBO_00134 │\n",
+      "│ fub         │ fraction unbound in blood                                       │ UNITLESS          │ True         │ http://purl.obolibrary.org/obo/PBPKO_00622 │\n",
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
       "│ f_su        │                                                                 │ L_PER_HR          │ False        │                                            │\n",
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
@@ -344,7 +344,7 @@
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
       "│ VBlood      │ total blood volume                                              │ L                 │ False        │ http://purl.obolibrary.org/obo/PBPKO_00108 │\n",
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
-      "│ FBlood      │ blood flow                                                      │ L_PER_HR          │ False        │ http://purl.obolibrary.org/obo/PBPKO_00013 │\n",
+      "│ FBlood      │ blood flow                                                      │ L_PER_HR          │ False        │ http://purl.obolibrary.org/obo/PBPKO_00030 │\n",
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
       "│ FFat        │ blood flow to the fat                                           │ L_PER_HR          │ False        │ http://purl.obolibrary.org/obo/PBPKO_00032 │\n",
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -420,21 +420,21 @@
       "├───────────────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
       "│ DeciM2            │ metre (exponent = 2, multiplier = 1, scale = -1)                                                                                                        │\n",
       "├───────────────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ DeciM             │ metre (exponent = 1, multiplier = 1, scale = -1)                                                                                                        │\n",
-      "├───────────────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
       "│ L_PER_KiloGM      │ litre (exponent = 1, multiplier = 1, scale = 0), gram (exponent = -1, multiplier = 1, scale = 3)                                                        │\n",
       "├───────────────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
       "│ UNITLESS          │ dimensionless (exponent = 1, multiplier = 1, scale = 0)                                                                                                 │\n",
       "├───────────────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
       "│ L_PER_KiloGM_HR   │ litre (exponent = 1, multiplier = 1, scale = 0), gram (exponent = -1, multiplier = 1, scale = 3), second (exponent = -1, multiplier = 3600, scale = 0)  │\n",
       "├───────────────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ DeciM             │ metre (exponent = 1, multiplier = 1, scale = -1)                                                                                                        │\n",
+      "├───────────────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
       "│ L_PER_HR          │ litre (exponent = 1, multiplier = 1, scale = 0), second (exponent = -1, multiplier = 3600, scale = 0)                                                   │\n",
       "├───────────────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ MilliMOL_PER_L_HR │ mole (exponent = 1, multiplier = 1, scale = -3), litre (exponent = -1, multiplier = 1, scale = 0), second (exponent = -1, multiplier = 3600, scale = 0) │\n",
+      "│ PER_H             │ second (exponent = -1, multiplier = 3600, scale = 0)                                                                                                    │\n",
       "├───────────────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
       "│ DeciM_PER_HR      │ metre (exponent = 1, multiplier = 1, scale = -1), second (exponent = -1, multiplier = 3600, scale = 0)                                                  │\n",
       "├───────────────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ PER_H             │ second (exponent = -1, multiplier = 3600, scale = 0)                                                                                                    │\n",
+      "│ MilliMOL_PER_L_HR │ mole (exponent = 1, multiplier = 1, scale = -3), litre (exponent = -1, multiplier = 1, scale = 0), second (exponent = -1, multiplier = 3600, scale = 0) │\n",
       "╘═══════════════════╧═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╛\n"
      ]
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
